--- a/popup.html
+++ b/popup.html
@@ -71,7 +71,7 @@
     }
 
     textarea {
-      height: 200px;
+      height: 150px; /* Reduced to make room for longer rewritten email */
       resize: none;
       line-height: 1.6;
     }
@@ -123,7 +123,7 @@
       border-radius: 5px;
       padding: 12px;
       margin-top: 10px;
-      height: 150px;
+      height: 250px; /* Increased from 150px to 250px */
       overflow-y: auto;
       font-size: 1rem;
       line-height: 1.6;
